Squash: wake_gestures: add sweep2wake, doubletap2wake and sweep2sleep
SQUASHED
a7cca06 wake_gestues: Fix a race condition where suspend state doesn't update correctly
6ebe378 wake_gestures: Make dt2s switch variable a static
beff75e wake_gestures: Kill delay before set_vibrate
035e619 wake_gestures: Fix a logic in detecting status bar area
38d4c76 wake_gestures: Return failure at dev_filter by default
8a48dad wake_gestures: Fix bug in the DT2S implementation
21245e7 wake_gestures: Fix a derp in suspend state variable
e4bfcdb wake_gestures: Implement double tap 2 sleep on status bar
d4f4da9 input: touchscreen: IST30xx: Use the native input release function
9000c56 input: touchscreen: IST30xx: Declare count in the loop
91655d7 input: touchscreen: Switch to a simple separate suspend state variable
916bb39 qpnp-haptic: expose vibration and enable wake_gestures vibration
a34fc4e wake_gestures: Don't register touch activities during a phone call
d3097f1 wake_gestures: Add FT5336 & IST30xx touch support
af1d502 wake_gestures: Initial modifications for little precious
6c0e746 wake_gestures: add sweep2wake, doubletap2wake and sweep2sleep

Signed-off-by: Pawan Singh <Pawan.S5277@yahoo.com>
Signed-off-by: parvezch <parvezchoudhury3@gmail.com>
Signed-off-by: sairam1411 <majgaonkars3@gmail.com>

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1162,4 +1162,7 @@ config TOUCHSCREEN_IST30XX
 
 source "drivers/input/touchscreen/IST30xx/Kconfig"
 
+config WAKE_GESTURES
+	bool "wake gestures"
+
 endif
